--- a/transmission_model/r/testing/chicago-param-sweep.rmd
+++ b/transmission_model/r/testing/chicago-param-sweep.rmd
@@ -29,7 +29,7 @@ dirs <- lapply(dir_nums, function (i) paste0(location, "/output_", i))
                        ) #main
 
    cas_nets <- lapply(dirs, function (i) 
-                        readRDS(paste0(i, "/main_network_", ntimesteps, ".RDS"))
+                        readRDS(paste0(i, "/casual_network_", ntimesteps, ".RDS"))
                        )
 
    biom_data <- lapply(dirs, function (i) 
@@ -80,12 +80,12 @@ The age distribution at the end of the simulation is below.
 
 
 ```{r, results='show'}
-age <- net%v%"age"
-plot(
-  qplot(age, geom="histogram", binwidth=5, 
-       col=I("red"), 
-       alpha=I(.2))
-  )
+# gg net%v%"age"
+# plot(
+#   qplot(age, geom="histogram", binwidth=5, 
+#        col=I("red"), 
+#        alpha=I(.2))
+#   )
 ```
 
 ## Prevalence
@@ -162,47 +162,52 @@ The annual incidence rates over the course of the simulation are shown below.
              aes(x=variable, y=value*365*100, color=as.factor(sim_num)))+geom_line()
      
    ```
-
-  
-  The mean annual incidence, averaged over the length of the simulation, is `r round(summ_inc_per_timestep[4]*365*100, 2)`%.   
-  
-## Sexual Networks
-
+   
 ### Main Partnerships
 
-#### Mean degree. 
+    #### Mean degree. 
 The target main mean degree is `r round(nedges*2/n, 2)` and a plot of the simulated mean
-degree, over the course of the simulation, is below.
+degree, over the course of the simulations, is below.
 
 ```{r, echo=FALSE, show='hide'}
    #counts_data <- rbind(counts_data, nedges)
    #type <- c(rep("simulated", (nrow(counts_data)-1)), rep("target", 1))
    #counts_data <- as.data.frame(cbind(counts_data, type))
    
-  ggplot(counts_data)+
-        geom_line(aes(x=time, y=main_edge_count*2/vertex_count))+
-        geom_line(aes(x=time, y=nedges*2/n))+
-        xlab("time step")+ylab("mean degree")
+  ggplot(counts_data_df)+
+        geom_line(aes(x=time/365, y=main_edge_count*2/vertex_count, col=sim_num))+
+        geom_line(aes(x=time/365, y=nedges*2/n))+
+        xlab("time step")+ylab("mean degree")+
+        scale_y_continuous(limits=c(0.4, 0.5))+
+        ylab("Mean degree (main)")+
+        xlab("Time (years)")
+  
 ```
 
-#### Degree distribution.
-The simulated and target momentary degree distributions are below.
-```{r, echo=FALSE, results='hide'}
-sim_deg_dist_num <- degreedist(net)
-sim_deg_dist <- sim_deg_dist_num/final.vcount
-names(sim_deg_dist) <- c("0", "1", "2")
-target_deg_dist_num <- deg_seq
-target_deg_dist <- target_deg_dist_num/init.vcount
-names(target_deg_dist) <- c("0", "1", "2")
+   #### Degree Distribution
 
-main_deg_dist_data <- cbind(t(sim_deg_dist[1:3]), t(target_deg_dist))
-main_deg_dist_data <- melt(main_deg_dist_data, id.vars=c("degree0, degree1, degree2"))
-main_deg_dist_data <- cbind(main_deg_dist_data, c(rep("simulated", 3), rep("target", 3)))
-colnames(main_deg_dist_data) <- c("ID", "degree", "value", "type")
+```{r, echo=FALSE, show='hide'}
+   sim_deg_dist_in_num <- lapply(main_nets, degreedist)
+   sim_deg_dist_prop <- unlist(sim_deg_dist_in_num)/unlist(final.vcount)
+   sim_deg_dist_prop_mat <- matrix(sim_deg_dist_prop, ncol=4, byrow=TRUE)
 
-ggplot(main_deg_dist_data, aes(x=degree, y=value, fill=type))+
-  geom_bar(position="dodge", stat="identity")+
-  ylab("Proportion of Agents")
+   sim_deg_dist_prop_mat_mean <- apply(sim_deg_dist_prop_mat, 2, mean)
+   names(sim_deg_dist_prop_mat_mean) <- as.factor(0:3)
+   
+   target_deg_dist_in_num <- c(deg_seq, 0)
+   target_deg_dist_prop <- target_deg_dist_in_num/init.vcount
+   names(target_deg_dist_prop) <-  names(sim_deg_dist_prop_mat_mean) 
+  
+   main_deg_dist_data <- cbind(t(sim_deg_dist_prop_mat_mean), t(target_deg_dist_prop))
+   main_deg_dist_data <- melt(main_deg_dist_data)
+   main_deg_dist_data$type <- c(rep("mean_of_sim", 4), rep("target", 4))
+   main_deg_dist_data_df <- as.data.frame(main_deg_dist_data)
+   
+
+   ggplot(main_deg_dist_data_df, aes(x=Var2, y=value, fill=type))+
+    geom_bar(position="dodge", stat="identity")+
+    ylab("Proportion of Agents")+
+    xlab("Degree")
 
 ```
 
@@ -210,12 +215,20 @@ ggplot(main_deg_dist_data, aes(x=degree, y=value, fill=type))+
 ```{r, echo=FALSE, results='hide'}
 ## (fast method from jonathan)
 
-# looking for mean partnership durations
-
-pt_data <- fread(paste0("../../Release/output/partnership_events_", sim_num,".csv")) 
-#fread("../../Release/output/partnership_events_40.csv")
-pt_data_main <- pt_data[network_type == 0]
-
+# looking for mean partnership duration
+pt_data_main <- lapply(pt_event_data, function (i)
+                                      i[network_type == 0]
+                       )
+                       
+# group by p1, p2
+pt_main_counts <- lapply(pt_data_main, 
+                        function (i)
+                        i[,.(counts = .N),by=.(p1,p2),][,unique(counts)] # 1 2 4 3
+                        )
+pt_main_counts_n <- lapply(pt_data_main, 
+                           function (i)
+                           i[,.(counts = .N),by=.(p1,p2),][,.N,by=counts]
+                           )
 # group by p1, p2
 pt_data_main[,.(counts = .N),by=.(p1,p2),][,unique(counts)] # 1 2 4 3
 pt_data_main[,.(counts = .N),by=.(p1,p2),][,.N,by=counts]
@@ -229,189 +242,17 @@ pt_data_main[,.(counts = .N),by=.(p1,p2),][,.N,by=counts]
 # so focus on just 2 is justified
     ## (old DONOTUSE: res <- pt_data_main[,.(tick, counts = .N),by=.(p1,p2),][counts == 2,abs(diff(tick))])
 
-res <- pt_data_main[,.(tick, counts = .N),by=.(p1,p2),][counts == 2,.(dur = abs(diff(tick))), by=.(p1,p2)][,dur]
+res_list <- lapply(pt_data_main, 
+                   function (i)
+                     i[,.(tick, counts = .N),by=.(p1,p2),][counts == 2,.(dur = abs(diff(tick))), by=.(p1,p2)][,dur]
+                   )
+summary(unlist(res_list))
 
-summary(res)
-
-res_dt <- as.data.frame(res)
-  qplot(res, geom="histogram", binwidth=100, 
+res_dt <- as.data.frame(unlist(res_list))
+  qplot(res_dt, geom="histogram", binwidth=100, 
        col=I("red"), 
        alpha=I(.2))
 
-sum.res <- summary(res)
+sum.res <- summary(unlist(res_list))
 
 ```
-
-The target mean duration is `r duration`. In the simulated data above,
-the interquartile range is `r as.numeric(sum.res[c(2,5)])`.  
-
-### Casual Partnerships
-
-#### Mean degree. 
-The target casual mean degree is `r round(cas_n_edges*2/n, 2)` and a plot of the simulated mean
-degree, over the course of the simulation, is below.
-
-```{r, echo=FALSE, show='asis'}
-   
-  ggplot(counts_data)+
-        geom_line(aes(x=time, y=casual_edge_count*2/vertex_count))+
-        geom_line(aes(x=time, y=cas_n_edges*2/n))+
-        xlab("time step")+ylab("mean degree")
-```
-
-#### Degree distribution.  
-The simulated and target momentary degree distributions are below.
-
-```{r, echo=FALSE, results='show'}
-sim_deg_dist_num <- degreedist(cas_net)
-sim_deg_dist <- sim_deg_dist_num/final.vcount
-names(sim_deg_dist) <- c("0", "1", "2")
-target_deg_dist_num <- cas_deg_seq
-target_deg_dist <- target_deg_dist_num/init.vcount
-names(target_deg_dist) <- c("0", "1", "2")
-
-casual_deg_dist_data <- cbind(t(sim_deg_dist[1:3]), t(target_deg_dist[1:3]))
-casual_deg_dist_data <- melt(casual_deg_dist_data, id.vars=c("degree0, degree1, degree2"))
-casual_deg_dist_data <- cbind(casual_deg_dist_data, c(rep("simulated", 3), rep("target", 3)))
-colnames(casual_deg_dist_data) <- c("ID", "degree", "value", "type")
-
-ggplot(casual_deg_dist_data, aes(x=degree, y=value, fill=type))+
-  geom_bar(position="dodge", stat="identity")+
-  ylab("Proportion of Agents")
-
-```
-
-#### Partnership duration.
-```{r, echo=TRUE, results='show'}
-pt_data_casual <- pt_data[network_type == 1]
-
-# group by p1, p2
-pt_data_casual[,.(counts = .N),by=.(p1,p2),][,unique(counts)] # 1 2 4 3
-pt_data_casual[,.(counts = .N),by=.(p1,p2),][,.N,by=counts]
-
-# so focus on just 2 is justified
-    ## (old DONOTUSE: res <- pt_data_casual[,.(tick, counts = .N),by=.(p1,p2),][counts == 2,abs(diff(tick))])
-
-res <- pt_data_casual[,.(tick, counts = .N),by=.(p1,p2),][counts == 2,.(dur = abs(diff(tick))), by=.(p1,p2)][,dur]
-
-summary(res)
-
-res_dt <- as.data.frame(res)
-  qplot(res, geom="histogram", binwidth=100, 
-       col=I("red"), 
-       alpha=I(.2))
-
-sum.res <- summary(res)
-```
-
-The target mean duration is `r dur_cas`. In the simulated data above,
-the interquartile range is `r as.numeric(sum.res[c(2,5)])`.  
-
-### Overlap between main and casual partnerships.
-```{r, echo=FALSE, results='show'}
-
-overlap_counts <- as.data.frame(
-  cbind(counts_data$time, counts_data$overlaps/counts_data$main_edge_count)
-  )
-overlap_counts <- rbind(overlap_counts, 
-                        cbind(counts_data$time, counts_data$overlaps/counts_data$casual_edge_count))
-denominator <- c(rep("main", nrow(overlap_counts)/2), 
-                 rep("casual", nrow(overlap_counts)/2)
-                 )
-overlap_counts <- cbind(overlap_counts, denominator)
-overlap_counts <- as.data.frame(overlap_counts)
-colnames(overlap_counts) <- c("time", "overlap", "denominator")
-
-ggplot(overlap_counts, aes(x=time, y=overlap, color=denominator))+
-  geom_line()
-
-```
-
-### Total mean degree: main and casual partnerships combined.
-
-```{r, echo=FALSE, results='show'}
-qplot(data=counts_data, x=time, 
-      y=((main_edge_count*2/vertex_count)+
-           (casual_edge_count*2/vertex_count)), 
-      main="Sim 36", ylab=("total mean degree"),
-      geom="line")
-```
-
-## Testing and Diagnosis
-
-```{r, echo=TRUE, results='show'}
-p_inf_status <- person_data$infection.status
-p_time_of_infection <- person_data$time.of.infection
-p_art_status <- person_data$art.status
-p_time_of_art_initiation <- person_data$time.of.art.initiation
-
-table(p_inf_status)
-table(p_art_status)
-
-xtabs(~factor(p_inf_status, exclude=NULL) + 
-        factor(p_art_status, exclude=NULL))
-
-summary(p_time_of_art_initiation - p_time_of_infection)
-neg_diff_art.init_inf <- neg.diff <- which(p_time_of_art_initiation - p_time_of_infection < 0)
-
-p_inf_status[neg_diff_art.init_inf]
-p_time_of_infection[neg_diff_art.init_inf]
-p_time_of_art_initiation[neg_diff_art.init_inf]
-summary(p_time_of_art_initiation)
-
-```
-
-## ART metrics
-
-The ART initiation portion was simplified so that all infected's initate ART 1 year after seroconversion. At presetnt, the proportion of the infected on ART was
-
-```{r, results='asis'}
-  on.art <- which(net%v%"art.status" == 1)
-  length(on.art)
-  length(on.art)/length(infected)
-
-```
-
-`r round(length(on.art)/length(infected), 2)`. The total proportion of all people in the population who were on ART is `r round(length(on.art)/length(infected)*prev, 2)`%.
-
-## Biomarkers
-
-
-
-```{r, results='asis'}
-   ## Selected upto n.to.follow infecteds at random
-   n_to_follow <- 10
-   infectees <- inf_event_data$infectee
-   uniq_biom_pid <- unique(biom_data$p_id)
-
-   infectee_uniq_biom_pid <- uniq_biom_pid[which(uniq_biom_pid %in% infectees)]
-   new <- biom_data[which(biom_data$p_id == infectee_uniq_biom_pid[1]),]
-
-   if (length(infectee_uniq_biom_pid > n_to_follow)){
-     infectee_uniq_biom_pid <- infectee_uniq_biom_pid[1:n_to_follow]#first 10
-     #infectee_uniq_biom_pid <- sample(infectee_uniq_biom_pid, 
-                                      #n_to_follow, replace=FALSE)# random 10
-   }
-   
-   for (i in 2:length(infectee_uniq_biom_pid)){
-     new_entry <- biom_data[which(biom_data$p_id == infectee_uniq_biom_pid[i]),]
-     new <- rbind(new, new_entry)
-   }
-   
-   new$p_id <- as.character(new$p_id)
-
-   par(mfrow=c(2,1))
-   ggplot(new, aes(x=tick/365, y=viral_load, color=p_id))+
-          geom_line()+xlab("year")
-   ggplot(new, aes(x=tick/365, y=cd4_count, color=p_id))+
-          geom_line()+xlab("year")
-
-```
-
-Example CD4 and viral load trajectories for `r n_to_follow` randomly selected, HIV-infected individuals are shown above. Individuals on ART are identifiable as those whose CD4 counts start to recover after decreasing initially; individuals who do not go on ART do experience a monotonic decrease.
-
-
-# Conclusion
-The features we have in the model appear to work well so far. We are in the process of adding more (as mentioned above), and continuing to monitor emergent trends in the behavior of key parameters and outcomes. 
-
-Suggestions welcome! 
