--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,11 @@
+15 March 2017
+
+Version 0.11:
+
+* Added additional logging to track the cause of edge removal (dissolution,
+death, etc.)
+
+
 14 March 2017
 
 Version 0.10:
