--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,10 @@
+5 April 2017
+
+Version 0.12:
+
+* Switched logging of uninfected count to occur after "death" check
+so that dead persons are not counted as uninfected.
+
 15 March 2017
 
 Version 0.11:
