--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+20 April 2017
+
+Version 0.14:
+
+* Probability of random external infection drawn from min max range.
+
 18 April 2017
 
 Version 0.13:
