--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,8 @@
+16 June 2017
+
+* Implemented PrEP v3: Persons on PrEP avg of 60 days with prep effectiveness 
+determined by the person’s adherence category
+
 31 May 2017
 
 Version 0.16
