Converted age specific output filter to a range from threshold

--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,10 @@
+11 November 2017
+
+Version 0.24
+
+* Added range-based age specific output
+* Input age parmameter is specifiable
+
 19 October 2017
 
 Version 0.23
