--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+22 January 2018
+
+Version 0.27
+
+* Added by age aggregate per timestep stats
+
 19 January 2018
 
 Version 0.26
@@ -48,7 +54,7 @@ Version 0.21
 
 Version 0.20
 
-* Added new output to record stats by age group (under 26, 26 and over). 
+* Added new output to record stats by age group (under 26, 26 and over).
 
 12 September 2017
 
@@ -64,7 +70,7 @@ Version 0.18
 
 16 June 2017
 
-* Implemented PrEP v3: Persons on PrEP avg of 60 days with prep effectiveness 
+* Implemented PrEP v3: Persons on PrEP avg of 60 days with prep effectiveness
 determined by the person’s adherence category
 
 31 May 2017
