--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,8 +1,14 @@
 8 February 2018
 
-Version 0.28
+Version 0.29
 
 * Added ability to increment PrEP yearly uptake. 
+
+30 January 2018
+
+Version 0.28
+
+* Fixes for starting from a serialized network.
 
 22 January 2018
 
