--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+10 April 2018
+
+Version 0.34
+
+* Fixed diagnosis initialization code that caused ART uptake to drop to 0
+
 3 April 2018
 
 Version 0.33
