Enabled unbalanced age related prep uptake and new stats

--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,11 @@
+11 May 2018
+
+Version 0.36
+
+* Enabled "unbalanced" age related prep uptake
+* Added viral suppression related stats
+* Added time of diagnosis as a stat
+
 10 April 2018
 
 Version 0.35
