--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,6 +1,12 @@
 
 27 August 2018
 
+Version 0.46
+
+* Removed subtraction of base use as its not part of increment
+
+27 August 2018
+
 Version 0.45
 
 * Fixed default intervention incrementation algorithm
