--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,10 @@
+7 September 2018
+
+Version 0.49
+
+* Updated prep uptake probability algorithm to account for persons going off prep due to aging out of model"
+
+
 5 September 2018
 
 Version 0.48
