--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -16,9 +16,9 @@ Version 0.49
 Version 0.48
 
 * Fixed random selection intervention by splitting into base and random selection.
-
-
-28 August 2018
+max.age
+max.age
+max.age 2018
 
 Version 0.47
 
