--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+13 September 2018
+
+Version 0.51
+
+* Undid prep fix from version 0.50
+
 11 September 2018
 
 Version 0.50
@@ -16,9 +22,8 @@ Version 0.49
 Version 0.48
 
 * Fixed random selection intervention by splitting into base and random selection.
-max.age
-max.age
-max.age 2018
+
+ 29 August 2018
 
 Version 0.47
 
