--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+19 September 2018
+
+Version 0.52
+
+* Made sure that net intervention does not put infecteds on prep
+
 13 September 2018
 
 Version 0.51
