Fixed ART scheduling issue for burn-in persons

--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -3,6 +3,7 @@
 Version 0.54
 
 * Updated cd4 count related mortality to new model
+* Fixed ART scheduling issue for burn-in persons
 
 16 October 2018
 
