--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+16 January 2018
+
+Version 0.55
+
+* Updated initialization to make it easier to switch between different sites (e.g., Houston and Chicago)
+
 02 November 2018
 
 Version 0.54
