--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,12 @@
+14 July 2019
+
+Version 0.58
+
+* Added biomarker logging by person id
+* Includes initial jail code, but is off by default (probability of incarceration is 0)
+
+(No version 0.57 due to versioning confusion)
+
 22 May 2019
 
 Version 0.56
