--- a/transmission_model/changelog.txt
+++ b/transmission_model/changelog.txt
@@ -1,3 +1,9 @@
+23 July 2019
+
+Version 0.59
+
+* Fixed issue with recording ARTLag in person data logger before the record had been initialized.
+
 14 July 2019
 
 Version 0.58
